--- a/styles/style.css
+++ b/styles/style.css
@@ -1,13 +1,12 @@
 .page {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 40px 0 80px;
+  padding: 40px 40px 80px;
   background-color: #ffffff;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  /* gap: 80px; */
   color: #1A1A1A;
   font-family: "MuseoSansCyrl", sans-serif;
   box-sizing: border-box;
@@ -34,12 +33,11 @@
   background: #93BBEA;
   border-radius: 40px;
   padding: 40px 0 54px;
-  margin: 0 40px 82px;
+  margin: 0 0 82px;
   position: relative;
   overflow: hidden;
   max-width: 1200px;
   width: 100%;
-  box-sizing: border-box;
 }
 
 .contacts::before {
@@ -52,6 +50,7 @@
   background-image: url(../images/contacts/left-pic.png);
   background-repeat: no-repeat;
   background-size: 100% 100%;
+  z-index: 1;
 }
 
 .contacts::after {
@@ -64,6 +63,7 @@
   background-image: url(../images/contacts/right-pic.png);
   background-repeat: no-repeat;
   background-size: 100% 100%;
+  z-index: 1;
 }
 
 .contacts__heading {
@@ -73,8 +73,9 @@
   font-weight: 900;
   text-align: center;
   margin: 0;
-  padding: 0 0 6px 0;
+  padding: 0 20px 6px;
   color: #FFFFFF;
+  z-index: 2;
 }
 
 .contacts__subheading {
@@ -84,10 +85,11 @@
   font-weight: 400;
   text-align: center;
   margin: 0;
-  padding: 0 0 40px;
+  padding: 0 20px 40px;
   color: #FFFFFF;
   display: block;
   max-width: 535px;
+  z-index: 2;
 }
 
 .contacts__items {
@@ -98,6 +100,7 @@
   align-items: center;
   gap: 8px;
   margin: 0 100px;
+  z-index: 2;
 }
 
 .contacts__item {
@@ -112,19 +115,11 @@
 }
 
 .contacts__link {
-  /* font-family: "MuseoSansCyrl", sans-serif;
-  font-size: 15px;
-  line-height: 18px;
-  font-weight: 600; */
   padding: 0;
   margin: 0;
   color: #1A1A1A;
   display: flex;
   align-items: center;
-}
-
-.contacts__link-icon {
-  
 }
 
 .contacts__link-icon_chat {
@@ -237,9 +232,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 80px;
 }
 
-.slider-container__heading {
+.section__heading {
   font-family: "MuseoSansCyrl", sans-serif;
   font-size: 40px;
   line-height: 48px;
@@ -250,30 +246,30 @@
 }
 
 .slider {
-  max-width: 1200px;
-  width: 100%;
-  padding: 32px 20px;
-  /* margin: 32px 20px; */
+  width: 84vw;
   overflow: hidden;
   position: relative;
   box-sizing: border-box;
+  align-self: start;
 }
 
 .slider__list {
-  width: 2142px;
-  height: 170px;
-  display: flex;
+  display: grid;
+  overflow-x: auto;
+  grid-template-columns: repeat(7, 1fr);
   gap: 20px;
-  position: relative;
-  left: 0;
-  transition: all ease 1s;
+  scrollbar-width: none;
+  padding: 32px 20px;
+
+}
+
+.slider__list::-webkit-scrollbar {
+  display: none;
 }
 
 .slider__item {
-  /* max-height: 160px; */
   height: 160px;
-  max-width: 282px;
-  width: 100%;
+  width: 282px;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -339,15 +335,20 @@
 }
 
 .slider__btn_next {
-  right: 0;
+  right: 3px;
 }
 
-.slider__btn_next_inactive {
+.slider__btn_inactive {
   display: none;
 }
 
+.slider__btn_active {
+  display: block;
+}
+
 .slider__btn_prev {
-  left: 0;
+  left: 3px;
+  display: none;
 }
 
 .slider__btn-arrow {
@@ -358,4 +359,168 @@
 
 .slider__btn-arrow_prev {
   transform: rotate(180deg);
+}
+
+.faq {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.faq__heading {
+  margin-bottom: 32px;
+}
+
+.faq__wrapper {
+  display: flex;
+  flex-direction: column;
+  max-width: 996px;
+  width: 100%;
+}
+
+.faq__box {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  border-radius: 16px;
+  padding: 20px 24px;
+  margin-bottom: 20px;
+  cursor: pointer;
+}
+
+.faq__question {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.faq__question-heading{
+  font-family: "MuseoSansCyrl", sans-serif;
+  font-size: 20px;
+  line-height: 24px;
+  font-weight: 600;
+  margin: 0;
+  color: #1A1A1A;
+  padding: 0;
+}
+
+.faq__arrow {
+  width: 24px;
+  height: 24px;
+  object-fit: cover;
+}
+
+.faq__answer-text {
+  font-family: "MuseoSansCyrl", sans-serif;
+  font-size: 13px;
+  line-height: 18.2px;
+  font-weight: 600;
+  margin: 0;
+  color: #949494;
+  padding: 0;
+}
+
+.faq__answer {
+  display: none;
+}
+
+.faq__answer_active {
+  display: block;
+}
+
+.faq__arrow_active {
+  transform: rotate(90deg);
+}
+
+@media screen and (max-width: 1024px){
+  .contacts {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (max-width: 955px){
+  .contacts__items {
+    max-width: 450px;
+  }
+}
+
+@media screen and (max-width: 768px){
+
+  .contacts__heading {
+    font-size: 52px;
+    line-height: 62px;
+  }
+
+  .slider__btn {
+    display: none !important;
+  }
+}
+
+@media screen and (max-width: 580px){
+  .page {
+    padding: 20px 15px 40px;
+  }
+  .contacts__heading {
+    font-size: 42px;
+    line-height: 42px;
+  }
+
+  .networks {
+    justify-content: center;
+  }
+
+  .networks__heading {
+    font-size: 32px;
+    line-height: 34px;
+    text-align: center;
+  }
+
+  .networks__subheading {
+    text-align: center;
+  }
+
+  .networks__list {
+    flex-wrap: wrap;
+    max-width: 173px;
+  }
+
+  .networks__item {
+    width: 46px;
+    height: 46px;
+  }
+}
+
+@media screen and (max-width: 450px){
+  .contacts__heading {
+    font-size: 32px;
+    line-height: 32px;
+  }
+
+  .section__heading {
+    font-size: 32px;
+    line-height: 32px;
+  }
+
+  .networks__heading {
+    font-size: 26px;
+    line-height: 28px;
+  }
+}
+
+@media screen and (max-width: 320px){
+  .contacts__heading {
+    font-size: 28px;
+    line-height: 28px;
+  }
+  .networks__heading {
+    font-size: 26px;
+    line-height: 28px;
+  }
+
+  .section__heading {
+    font-size: 28px;
+    line-height: 28px;
+  }
 }
